cabal-version:              2.4
name:                       Z-Botan
version:                    0.1.0.0
synopsis:                   Crypto and TLS for Haskell
description:                Crypto and TLS for Haskell
license:                    BSD-3-Clause
license-file:               LICENSE
author:                     Dong Han, Tao He
maintainer:                 winterland1989@gmail.com
copyright:                  (c) Dong Han, 2017-2020
                            (c) Tao He, 2017-2019
category:                   Data
build-type:                 Custom
homepage:                   https://github.com/haskell-Z/z-botan
bug-reports:                https://github.com/haskell-Z/z-botan/issues

extra-source-files:         ChangeLog.md
                            README.md
                            LICENSE
                            third_party/botan/**/*.h

custom-setup
  setup-depends:
    Cabal >= 2.4.0.0 && < 4,
    filepath,
    directory >= 1.2.3.0,
    base >= 4.5 && < 5.0

source-repository head
    type:     git
    location: git://github.com/haskell-Z/z-botan.git

flag no-pkg-config
    description: Don't use pkg-config to check for library dependences
    default: False
    manual: True

library
    exposed-modules:        Z.Botan.FFI
                            Z.IO.TLS

    build-depends:          base                    >= 4.12 && <5.0
                          , Z-Data                  >= 0.1.6 && < 0.1.7
                          , Z-IO                    >= 0.1.4 && < 0.1.5


    include-dirs:           include
                            third_party/botan/build
                            third_party/botan/build/include
                            third_party/botan/build/include/botan
                            third_party/botan/src/lib/prov/pkcs11
                            

    includes:               botan.h
                            hs_botan.h

    install-includes:       hs_botan.h 
    
    c-sources:              cbits/hs_botan.cpp

                            third_party/botan/src/lib/asn1/alg_id.cpp
                            third_party/botan/src/lib/asn1/asn1_attribute.cpp
                            third_party/botan/src/lib/asn1/asn1_obj.cpp
                            third_party/botan/src/lib/asn1/asn1_oid.cpp
                            third_party/botan/src/lib/asn1/asn1_print.cpp
                            third_party/botan/src/lib/asn1/asn1_str.cpp
                            third_party/botan/src/lib/asn1/asn1_time.cpp
                            third_party/botan/src/lib/asn1/ber_dec.cpp
                            third_party/botan/src/lib/asn1/der_enc.cpp
                            third_party/botan/src/lib/asn1/oid_maps.cpp
                            third_party/botan/src/lib/asn1/oids.cpp
                            third_party/botan/src/lib/base/buf_comp.cpp
                            third_party/botan/src/lib/base/scan_name.cpp
                            third_party/botan/src/lib/base/sym_algo.cpp
                            third_party/botan/src/lib/base/symkey.cpp
                            third_party/botan/src/lib/block/aes/aes.cpp
                            third_party/botan/src/lib/block/aes/aes_ni/aes_ni.cpp
                            third_party/botan/src/lib/block/aes/aes_vperm/aes_vperm.cpp
                            third_party/botan/src/lib/block/aria/aria.cpp
                            third_party/botan/src/lib/block/block_cipher.cpp
                            third_party/botan/src/lib/block/blowfish/blowfish.cpp
                            third_party/botan/src/lib/block/camellia/camellia.cpp
                            third_party/botan/src/lib/block/cascade/cascade.cpp
                            third_party/botan/src/lib/block/cast128/cast128.cpp
                            third_party/botan/src/lib/block/cast256/cast256.cpp
                            third_party/botan/src/lib/block/des/des.cpp
                            third_party/botan/src/lib/block/des/des_tab.cpp
                            third_party/botan/src/lib/block/des/desx.cpp
                            third_party/botan/src/lib/block/gost_28147/gost_28147.cpp
                            third_party/botan/src/lib/block/idea/idea.cpp
                            third_party/botan/src/lib/block/idea/idea_sse2/idea_sse2.cpp
                            third_party/botan/src/lib/block/kasumi/kasumi.cpp
                            third_party/botan/src/lib/block/lion/lion.cpp
                            third_party/botan/src/lib/block/misty1/misty1.cpp, 
                            third_party/botan/src/lib/block/noekeon/noekeon.cpp
                            third_party/botan/src/lib/block/noekeon/noekeon_simd/noekeon_simd.cpp
                            third_party/botan/src/lib/block/seed/seed.cpp
                            third_party/botan/src/lib/block/serpent/serpent.cpp
                            third_party/botan/src/lib/block/serpent/serpent_avx2/serpent_avx2.cpp
                            third_party/botan/src/lib/block/serpent/serpent_simd/serpent_simd.cpp
                            third_party/botan/src/lib/block/shacal2/shacal2.cpp
                            third_party/botan/src/lib/block/shacal2/shacal2_avx2/shacal2_avx2.cpp
                            third_party/botan/src/lib/block/shacal2/shacal2_simd/shacal2_simd.cpp
                            third_party/botan/src/lib/block/shacal2/shacal2_x86/shacal2_x86.cpp
                            third_party/botan/src/lib/block/sm4/sm4.cpp
                            third_party/botan/src/lib/block/threefish_512/threefish_512.cpp
                            third_party/botan/src/lib/block/threefish_512/threefish_512_avx2/threefish_512_avx2.cpp
                            third_party/botan/src/lib/block/twofish/twofish.cpp
                            third_party/botan/src/lib/block/twofish/twofish_tab.cpp
                            third_party/botan/src/lib/block/xtea/xtea.cpp
                            third_party/botan/src/lib/codec/base32/base32.cpp
                            third_party/botan/src/lib/codec/base58/base58.cpp
                            third_party/botan/src/lib/codec/base64/base64.cpp
                            third_party/botan/src/lib/codec/hex/hex.cpp
                            third_party/botan/src/lib/compat/sodium/sodium_25519.cpp
                            third_party/botan/src/lib/compat/sodium/sodium_aead.cpp
                            third_party/botan/src/lib/compat/sodium/sodium_auth.cpp
                            third_party/botan/src/lib/compat/sodium/sodium_box.cpp
                            third_party/botan/src/lib/compat/sodium/sodium_chacha.cpp
                            third_party/botan/src/lib/compat/sodium/sodium_salsa.cpp
                            third_party/botan/src/lib/compat/sodium/sodium_secretbox.cpp
                            third_party/botan/src/lib/compat/sodium/sodium_utils.cpp
                            third_party/botan/src/lib/entropy/dev_random/dev_random.cpp
                            third_party/botan/src/lib/entropy/entropy_srcs.cpp
                            third_party/botan/src/lib/entropy/proc_walk/proc_walk.cpp
                            third_party/botan/src/lib/entropy/rdseed/rdseed.cpp
                            third_party/botan/src/lib/ffi/ffi.cpp
                            third_party/botan/src/lib/ffi/ffi_block.cpp
                            third_party/botan/src/lib/ffi/ffi_cert.cpp
                            third_party/botan/src/lib/ffi/ffi_cipher.cpp
                            third_party/botan/src/lib/ffi/ffi_fpe.cpp
                            third_party/botan/src/lib/ffi/ffi_hash.cpp
                            third_party/botan/src/lib/ffi/ffi_hotp.cpp
                            third_party/botan/src/lib/ffi/ffi_kdf.cpp
                            third_party/botan/src/lib/ffi/ffi_keywrap.cpp
                            third_party/botan/src/lib/ffi/ffi_mac.cpp
                            third_party/botan/src/lib/ffi/ffi_mp.cpp
                            third_party/botan/src/lib/ffi/ffi_pk_op.cpp
                            third_party/botan/src/lib/ffi/ffi_pkey.cpp
                            third_party/botan/src/lib/ffi/ffi_pkey_algs.cpp
                            third_party/botan/src/lib/ffi/ffi_rng.cpp
                            third_party/botan/src/lib/ffi/ffi_totp.cpp
                            third_party/botan/src/lib/filters/algo_filt.cpp
                            third_party/botan/src/lib/filters/b64_filt.cpp
                            third_party/botan/src/lib/filters/basefilt.cpp
                            third_party/botan/src/lib/filters/buf_filt.cpp
                            third_party/botan/src/lib/filters/cipher_filter.cpp
                            third_party/botan/src/lib/filters/comp_filter.cpp
                            third_party/botan/src/lib/filters/data_snk.cpp
                            third_party/botan/src/lib/filters/fd_unix/fd_unix.cpp
                            third_party/botan/src/lib/filters/filter.cpp
                            third_party/botan/src/lib/filters/hex_filt.cpp
                            third_party/botan/src/lib/filters/out_buf.cpp
                            third_party/botan/src/lib/filters/pipe.cpp
                            third_party/botan/src/lib/filters/pipe_io.cpp
                            third_party/botan/src/lib/filters/pipe_rw.cpp
                            third_party/botan/src/lib/filters/secqueue.cpp
                            third_party/botan/src/lib/filters/threaded_fork.cpp
                            third_party/botan/src/lib/hash/blake2/blake2b.cpp
                            third_party/botan/src/lib/hash/checksum/adler32/adler32.cpp
                            third_party/botan/src/lib/hash/checksum/crc24/crc24.cpp
                            third_party/botan/src/lib/hash/checksum/crc32/crc32.cpp
                            third_party/botan/src/lib/hash/comb4p/comb4p.cpp
                            third_party/botan/src/lib/hash/gost_3411/gost_3411.cpp
                            third_party/botan/src/lib/hash/hash.cpp
                            third_party/botan/src/lib/hash/keccak/keccak.cpp
                            third_party/botan/src/lib/hash/md4/md4.cpp
                            third_party/botan/src/lib/hash/md5/md5.cpp
                            third_party/botan/src/lib/hash/mdx_hash/mdx_hash.cpp
                            third_party/botan/src/lib/hash/par_hash/par_hash.cpp
                            third_party/botan/src/lib/hash/rmd160/rmd160.cpp
                            third_party/botan/src/lib/hash/sha1/sha160.cpp
                            third_party/botan/src/lib/hash/sha1/sha1_sse2/sha1_sse2.cpp
                            third_party/botan/src/lib/hash/sha1/sha1_x86/sha1_x86.cpp
                            third_party/botan/src/lib/hash/sha2_32/sha2_32.cpp
                            third_party/botan/src/lib/hash/sha2_32/sha2_32_bmi2/sha2_32_bmi2.cpp
                            third_party/botan/src/lib/hash/sha2_32/sha2_32_x86/sha2_32_x86.cpp
                            third_party/botan/src/lib/hash/sha2_64/sha2_64.cpp
                            third_party/botan/src/lib/hash/sha2_64/sha2_64_bmi2/sha2_64_bmi2.cpp
                            third_party/botan/src/lib/hash/sha3/sha3.cpp
                            third_party/botan/src/lib/hash/sha3/sha3_bmi2/sha3_bmi2.cpp
                            third_party/botan/src/lib/hash/shake/shake.cpp
                            third_party/botan/src/lib/hash/skein/skein_512.cpp
                            third_party/botan/src/lib/hash/sm3/sm3.cpp
                            third_party/botan/src/lib/hash/streebog/streebog.cpp
                            third_party/botan/src/lib/hash/streebog/streebog_precalc.cpp
                            third_party/botan/src/lib/hash/tiger/tig_tab.cpp
                            third_party/botan/src/lib/hash/tiger/tiger.cpp
                            third_party/botan/src/lib/hash/whirlpool/whirlpool.cpp
                            third_party/botan/src/lib/hash/whirlpool/whrl_tab.cpp
                            third_party/botan/src/lib/kdf/hkdf/hkdf.cpp
                            third_party/botan/src/lib/kdf/kdf.cpp
                            third_party/botan/src/lib/kdf/kdf1/kdf1.cpp
                             third_party/botan/src/lib/kdf/kdf1_iso18033/kdf1_iso18033.cpp
                            third_party/botan/src/lib/kdf/kdf2/kdf2.cpp
                            third_party/botan/src/lib/kdf/prf_tls/prf_tls.cpp
                            third_party/botan/src/lib/kdf/prf_x942/prf_x942.cpp
                            third_party/botan/src/lib/kdf/sp800_108/sp800_108.cpp
                            third_party/botan/src/lib/kdf/sp800_56a/sp800_56a.cpp
                            third_party/botan/src/lib/kdf/sp800_56c/sp800_56c.cpp
                            third_party/botan/src/lib/mac/cbc_mac/cbc_mac.cpp
                            third_party/botan/src/lib/mac/cmac/cmac.cpp
                            third_party/botan/src/lib/mac/gmac/gmac.cpp
                            third_party/botan/src/lib/mac/hmac/hmac.cpp
                            third_party/botan/src/lib/mac/mac.cpp
                            third_party/botan/src/lib/mac/poly1305/poly1305.cpp
                            third_party/botan/src/lib/mac/siphash/siphash.cpp
                            third_party/botan/src/lib/mac/x919_mac/x919_mac.cpp
                            third_party/botan/src/lib/math/bigint/big_code.cpp
                            third_party/botan/src/lib/math/bigint/big_io.cpp
                            third_party/botan/src/lib/math/bigint/big_ops2.cpp
                            third_party/botan/src/lib/math/bigint/big_ops3.cpp
                            third_party/botan/src/lib/math/bigint/big_rand.cpp
                            third_party/botan/src/lib/math/bigint/bigint.cpp
                            third_party/botan/src/lib/math/bigint/divide.cpp
                            third_party/botan/src/lib/math/mp/mp_comba.cpp
                            third_party/botan/src/lib/math/mp/mp_karat.cpp
                            third_party/botan/src/lib/math/mp/mp_monty.cpp
                            third_party/botan/src/lib/math/mp/mp_monty_n.cpp
                            third_party/botan/src/lib/math/numbertheory/dsa_gen.cpp
                            third_party/botan/src/lib/math/numbertheory/jacobi.cpp
                            third_party/botan/src/lib/math/numbertheory/make_prm.cpp
                            third_party/botan/src/lib/math/numbertheory/mod_inv.cpp
                            third_party/botan/src/lib/math/numbertheory/monty.cpp
                            third_party/botan/src/lib/math/numbertheory/monty_exp.cpp
                            third_party/botan/src/lib/math/numbertheory/mp_numth.cpp
                            third_party/botan/src/lib/math/numbertheory/numthry.cpp
                            third_party/botan/src/lib/math/numbertheory/nistp_redc.cpp
                            third_party/botan/src/lib/math/numbertheory/pow_mod.cpp
                            third_party/botan/src/lib/math/numbertheory/primality.cpp
                            third_party/botan/src/lib/math/numbertheory/primes.cpp
                            third_party/botan/src/lib/math/numbertheory/reducer.cpp
                            third_party/botan/src/lib/math/numbertheory/ressol.cpp
                            third_party/botan/src/lib/modes/aead/aead.cpp
                            third_party/botan/src/lib/modes/aead/ccm/ccm.cpp
                            third_party/botan/src/lib/modes/aead/chacha20poly1305/chacha20poly1305.cpp
                            third_party/botan/src/lib/modes/aead/eax/eax.cpp
                            third_party/botan/src/lib/modes/aead/gcm/clmul_cpu/clmul_cpu.cpp
                            third_party/botan/src/lib/modes/aead/gcm/clmul_ssse3/clmul_ssse3.cpp
                            third_party/botan/src/lib/modes/aead/gcm/gcm.cpp
                            third_party/botan/src/lib/modes/aead/gcm/ghash.cpp
                            third_party/botan/src/lib/modes/aead/ocb/ocb.cpp
                            third_party/botan/src/lib/modes/aead/siv/siv.cpp
                            third_party/botan/src/lib/modes/cbc/cbc.cpp
                            third_party/botan/src/lib/modes/cfb/cfb.cpp
                            third_party/botan/src/lib/modes/cipher_mode.cpp
                            third_party/botan/src/lib/modes/mode_pad/mode_pad.cpp
                            third_party/botan/src/lib/modes/xts/xts.cpp
                            third_party/botan/src/lib/passhash/bcrypt/bcrypt.cpp
                            third_party/botan/src/lib/passhash/passhash9/passhash9.cpp
                            third_party/botan/src/lib/pbkdf/argon2/argon2.cpp
                            third_party/botan/src/lib/pbkdf/argon2/argon2fmt.cpp
                            third_party/botan/src/lib/pbkdf/argon2/argon2pwhash.cpp
                            third_party/botan/src/lib/pbkdf/bcrypt_pbkdf/bcrypt_pbkdf.cpp
                            third_party/botan/src/lib/pbkdf/pbkdf.cpp
                            third_party/botan/src/lib/pbkdf/pbkdf1/pbkdf1.cpp
                            third_party/botan/src/lib/pbkdf/pbkdf2/pbkdf2.cpp
                            third_party/botan/src/lib/pbkdf/pgp_s2k/pgp_s2k.cpp
                            third_party/botan/src/lib/pbkdf/pwdhash.cpp
                            third_party/botan/src/lib/pbkdf/scrypt/scrypt.cpp
                            third_party/botan/src/lib/pk_pad/eme.cpp
                            third_party/botan/src/lib/pk_pad/eme_oaep/oaep.cpp
                            third_party/botan/src/lib/pk_pad/eme_pkcs1/eme_pkcs.cpp
                            third_party/botan/src/lib/pk_pad/eme_raw/eme_raw.cpp
                            third_party/botan/src/lib/pk_pad/emsa.cpp
                            third_party/botan/src/lib/pk_pad/emsa1/emsa1.cpp
                            third_party/botan/src/lib/pk_pad/emsa_pkcs1/emsa_pkcs1.cpp
                            third_party/botan/src/lib/pk_pad/emsa_pssr/pssr.cpp
                            third_party/botan/src/lib/pk_pad/emsa_raw/emsa_raw.cpp
                            third_party/botan/src/lib/pk_pad/emsa_x931/emsa_x931.cpp
                            third_party/botan/src/lib/pk_pad/hash_id/hash_id.cpp
                            third_party/botan/src/lib/pk_pad/iso9796/iso9796.cpp
                            third_party/botan/src/lib/pk_pad/mgf1/mgf1.cpp
                            third_party/botan/src/lib/pk_pad/padding.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_ecc_key.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_ecdh.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_ecdsa.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_mechanism.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_module.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_object.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_randomgenerator.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_rsa.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_session.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_slot.cpp
                            third_party/botan/src/lib/prov/pkcs11/p11_x509.cpp
                            third_party/botan/src/lib/psk_db/psk_db.cpp
                            third_party/botan/src/lib/psk_db/psk_db_sql.cpp
                            third_party/botan/src/lib/pubkey/blinding.cpp
                            third_party/botan/src/lib/pubkey/cecpq1/cecpq1.cpp
                            third_party/botan/src/lib/pubkey/curve25519/curve25519.cpp
                            third_party/botan/src/lib/pubkey/curve25519/donna.cpp
                            third_party/botan/src/lib/pubkey/dh/dh.cpp
                            third_party/botan/src/lib/pubkey/dl_algo/dl_algo.cpp
                            third_party/botan/src/lib/pubkey/dl_group/dl_group.cpp
                            third_party/botan/src/lib/pubkey/dl_group/dl_named.cpp
                            third_party/botan/src/lib/pubkey/dlies/dlies.cpp
                            third_party/botan/src/lib/pubkey/dsa/dsa.cpp
                            third_party/botan/src/lib/pubkey/ec_group/curve_gfp.cpp
                            third_party/botan/src/lib/pubkey/ec_group/ec_group.cpp
                            third_party/botan/src/lib/pubkey/ec_group/ec_named.cpp
                            third_party/botan/src/lib/pubkey/ec_group/point_gfp.cpp
                            third_party/botan/src/lib/pubkey/ec_group/point_mul.cpp
                            third_party/botan/src/lib/pubkey/ecc_key/ecc_key.cpp
                            third_party/botan/src/lib/pubkey/ecdh/ecdh.cpp
                            third_party/botan/src/lib/pubkey/ecdsa/ecdsa.cpp
                            third_party/botan/src/lib/pubkey/ecgdsa/ecgdsa.cpp
                            third_party/botan/src/lib/pubkey/ecies/ecies.cpp
                            third_party/botan/src/lib/pubkey/eckcdsa/eckcdsa.cpp
                            third_party/botan/src/lib/pubkey/ed25519/ed25519.cpp
                            third_party/botan/src/lib/pubkey/ed25519/ed25519_fe.cpp
                            third_party/botan/src/lib/pubkey/ed25519/ed25519_key.cpp
                            third_party/botan/src/lib/pubkey/ed25519/ge.cpp
                            third_party/botan/src/lib/pubkey/ed25519/sc_muladd.cpp
                            third_party/botan/src/lib/pubkey/ed25519/sc_reduce.cpp
                            third_party/botan/src/lib/pubkey/elgamal/elgamal.cpp
                            third_party/botan/src/lib/pubkey/gost_3410/gost_3410.cpp
                            third_party/botan/src/lib/pubkey/keypair/keypair.cpp
                            third_party/botan/src/lib/pubkey/mce/code_based_key_gen.cpp
                            third_party/botan/src/lib/pubkey/mce/gf2m_rootfind_dcmp.cpp
                            third_party/botan/src/lib/pubkey/mce/gf2m_small_m.cpp
                            third_party/botan/src/lib/pubkey/mce/goppa_code.cpp
                            third_party/botan/src/lib/pubkey/mce/mce_workfactor.cpp
                            third_party/botan/src/lib/pubkey/mce/mceliece.cpp
                            third_party/botan/src/lib/pubkey/mce/mceliece_key.cpp
                            third_party/botan/src/lib/pubkey/mce/polyn_gf2m.cpp
                            third_party/botan/src/lib/pubkey/mceies/mceies.cpp
                            third_party/botan/src/lib/pubkey/newhope/newhope.cpp
                            third_party/botan/src/lib/pubkey/pbes2/pbes2.cpp
                            third_party/botan/src/lib/pubkey/pem/pem.cpp
                            third_party/botan/src/lib/pubkey/pk_algs.cpp
                            third_party/botan/src/lib/pubkey/pk_keys.cpp
                            third_party/botan/src/lib/pubkey/pk_ops.cpp
                            third_party/botan/src/lib/pubkey/pkcs8.cpp
                            third_party/botan/src/lib/pubkey/pubkey.cpp
                            third_party/botan/src/lib/pubkey/rfc6979/rfc6979.cpp
                            third_party/botan/src/lib/pubkey/rsa/rsa.cpp
                            third_party/botan/src/lib/pubkey/sm2/sm2.cpp
                            third_party/botan/src/lib/pubkey/sm2/sm2_enc.cpp
                            third_party/botan/src/lib/pubkey/workfactor.cpp
                            third_party/botan/src/lib/pubkey/x509_key.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_common_ops.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_hash.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_index_registry.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_parameters.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_privatekey.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_publickey.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_signature.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_signature_operation.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_verification_operation.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_wots_parameters.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_wots_privatekey.cpp
                            third_party/botan/src/lib/pubkey/xmss/xmss_wots_publickey.cpp
                            third_party/botan/src/lib/rng/auto_rng/auto_rng.cpp
                            third_party/botan/src/lib/rng/chacha_rng/chacha_rng.cpp
                            third_party/botan/src/lib/rng/hmac_drbg/hmac_drbg.cpp
                            third_party/botan/src/lib/rng/processor_rng/processor_rng.cpp
                            third_party/botan/src/lib/rng/rdrand_rng/rdrand_rng.cpp
                            third_party/botan/src/lib/rng/rng.cpp
                            third_party/botan/src/lib/rng/stateful_rng/stateful_rng.cpp
                            third_party/botan/src/lib/rng/system_rng/system_rng.cpp
                            third_party/botan/src/lib/stream/chacha/chacha.cpp
                            third_party/botan/src/lib/stream/chacha/chacha_avx2/chacha_avx2.cpp
                            third_party/botan/src/lib/stream/chacha/chacha_simd32/chacha_simd32.cpp
                            third_party/botan/src/lib/stream/ctr/ctr.cpp
                            third_party/botan/src/lib/stream/ofb/ofb.cpp
                            third_party/botan/src/lib/stream/rc4/rc4.cpp
                            third_party/botan/src/lib/stream/salsa20/salsa20.cpp
                            third_party/botan/src/lib/stream/shake_cipher/shake_cipher.cpp
                            third_party/botan/src/lib/stream/stream_cipher.cpp
                            third_party/botan/src/lib/tls/credentials_manager.cpp
                            third_party/botan/src/lib/tls/msg_cert_req.cpp
                            third_party/botan/src/lib/tls/msg_cert_status.cpp
                            third_party/botan/src/lib/tls/msg_cert_verify.cpp
                            third_party/botan/src/lib/tls/msg_certificate.cpp
                            third_party/botan/src/lib/tls/msg_client_hello.cpp
                            third_party/botan/src/lib/tls/msg_client_kex.cpp
                            third_party/botan/src/lib/tls/msg_finished.cpp
                            third_party/botan/src/lib/tls/msg_hello_verify.cpp
                            third_party/botan/src/lib/tls/msg_server_hello.cpp
                            third_party/botan/src/lib/tls/msg_server_kex.cpp
                            third_party/botan/src/lib/tls/msg_session_ticket.cpp
                            third_party/botan/src/lib/tls/sessions_sql/tls_session_manager_sql.cpp
                            third_party/botan/src/lib/tls/tls_alert.cpp
                            third_party/botan/src/lib/tls/tls_algos.cpp
                            third_party/botan/src/lib/tls/tls_blocking.cpp
                            third_party/botan/src/lib/tls/tls_callbacks.cpp
                            third_party/botan/src/lib/tls/tls_cbc/tls_cbc.cpp
                            third_party/botan/src/lib/tls/tls_channel.cpp
                            third_party/botan/src/lib/tls/tls_ciphersuite.cpp
                            third_party/botan/src/lib/tls/tls_client.cpp
                            third_party/botan/src/lib/tls/tls_extensions.cpp
                            third_party/botan/src/lib/tls/tls_handshake_hash.cpp
                            third_party/botan/src/lib/tls/tls_handshake_io.cpp
                            third_party/botan/src/lib/tls/tls_handshake_state.cpp
                            third_party/botan/src/lib/tls/tls_policy.cpp
                            third_party/botan/src/lib/tls/tls_record.cpp
                            third_party/botan/src/lib/tls/tls_server.cpp
                            third_party/botan/src/lib/tls/tls_session.cpp
                            third_party/botan/src/lib/tls/tls_session_key.cpp
                            third_party/botan/src/lib/tls/tls_session_manager_memory.cpp
                            third_party/botan/src/lib/tls/tls_suite_info.cpp
                            third_party/botan/src/lib/tls/tls_text_policy.cpp
                            third_party/botan/src/lib/tls/tls_version.cpp
                            third_party/botan/src/lib/utils/assert.cpp
                            third_party/botan/src/lib/utils/calendar.cpp
                            third_party/botan/src/lib/utils/charset.cpp
                            third_party/botan/src/lib/utils/cpuid/cpuid.cpp
                            third_party/botan/src/lib/utils/cpuid/cpuid_arm.cpp
                            third_party/botan/src/lib/utils/cpuid/cpuid_ppc.cpp
                            third_party/botan/src/lib/utils/cpuid/cpuid_x86.cpp
                            third_party/botan/src/lib/utils/ct_utils.cpp
                            third_party/botan/src/lib/utils/data_src.cpp
                            third_party/botan/src/lib/utils/dyn_load/dyn_load.cpp
                            third_party/botan/src/lib/utils/exceptn.cpp
                            third_party/botan/src/lib/utils/filesystem.cpp
                            third_party/botan/src/lib/utils/http_util/http_util.cpp
                            third_party/botan/src/lib/utils/locking_allocator/locking_allocator.cpp
                            third_party/botan/src/lib/utils/mem_ops.cpp
                            third_party/botan/src/lib/utils/mem_pool/mem_pool.cpp
                            third_party/botan/src/lib/utils/os_utils.cpp
                            third_party/botan/src/lib/utils/parsing.cpp
                            third_party/botan/src/lib/utils/poly_dbl/poly_dbl.cpp
                            third_party/botan/src/lib/utils/read_cfg.cpp
                            third_party/botan/src/lib/utils/read_kv.cpp
                            third_party/botan/src/lib/utils/socket/socket.cpp
                            third_party/botan/src/lib/utils/socket/socket_udp.cpp
                            third_party/botan/src/lib/utils/socket/uri.cpp
                            third_party/botan/src/lib/utils/thread_utils/barrier.cpp
                            third_party/botan/src/lib/utils/thread_utils/rwlock.cpp
                            third_party/botan/src/lib/utils/thread_utils/semaphore.cpp
                            third_party/botan/src/lib/utils/thread_utils/thread_pool.cpp
                            third_party/botan/src/lib/utils/timer.cpp
                            third_party/botan/src/lib/utils/uuid/uuid.cpp
                            third_party/botan/src/lib/utils/version.cpp
                            third_party/botan/src/lib/x509/asn1_alt_name.cpp
                            third_party/botan/src/lib/x509/cert_status.cpp
                            third_party/botan/src/lib/x509/certstor.cpp
                            third_party/botan/src/lib/x509/certstor_flatfile/certstor_flatfile.cpp
                            third_party/botan/src/lib/x509/certstor_sql/certstor_sql.cpp
                            third_party/botan/src/lib/x509/certstor_system/certstor_system.cpp
                            third_party/botan/src/lib/x509/crl_ent.cpp
                            third_party/botan/src/lib/x509/datastor.cpp
                            third_party/botan/src/lib/x509/key_constraint.cpp
                            third_party/botan/src/lib/x509/name_constraint.cpp
                            third_party/botan/src/lib/x509/ocsp.cpp
                            third_party/botan/src/lib/x509/ocsp_types.cpp
                            third_party/botan/src/lib/x509/pkcs10.cpp
                            third_party/botan/src/lib/x509/x509_ca.cpp
                            third_party/botan/src/lib/x509/x509_crl.cpp
                            third_party/botan/src/lib/x509/x509_dn.cpp
                            third_party/botan/src/lib/x509/x509_dn_ub.cpp
                            third_party/botan/src/lib/x509/x509_ext.cpp
                            third_party/botan/src/lib/x509/x509_obj.cpp
                            third_party/botan/src/lib/x509/x509cert.cpp
                            third_party/botan/src/lib/x509/x509opt.cpp
                            third_party/botan/src/lib/x509/x509path.cpp
                            third_party/botan/src/lib/x509/x509self.cpp

    extra-libraries:        stdc++

    default-language:       Haskell2010
    build-tool-depends:     hsc2hs:hsc2hs, hspec-discover:hspec-discover

    ghc-options:            -Wall

test-suite Z-Botan-Test
    type:                   exitcode-stdio-1.0
    main-is:                Spec.hs
    hs-source-dirs:         test/
    build-depends:          base
                          , Z-IO
                          , Z-Data
                          , hspec                   >= 2.5.4
                          , HUnit
                          , QuickCheck              >= 2.10
                          , quickcheck-instances

    other-modules:       

    ghc-options:            -threaded
    default-language:       Haskell2010


