cabal-version:              2.4
name:                       Z-Botan
version:                    0.1.0.0
synopsis:                   Crypto and TLS for Haskell
description:                Crypto and TLS for Haskell
license:                    BSD-3-Clause
license-file:               LICENSE
author:                     Dong Han, Tao He
maintainer:                 winterland1989@gmail.com
copyright:                  (c) Dong Han, 2017-2020
                            (c) Tao He, 2017-2019
category:                   Data
build-type:                 Custom
homepage:                   https://github.com/haskell-Z/z-botan
bug-reports:                https://github.com/haskell-Z/z-botan/issues

extra-source-files:         ChangeLog.md
                            README.md
                            LICENSE
                            third_party/botan/src/**/*.h
                            third_party/botan/src/**/*.cpp
                            third_party/botan/configure.py
                            third_party/cacert.md
                            third_party/cacert.pem

custom-setup
  setup-depends:
    Cabal >= 2.4.0.0 && < 4,
    filepath,
    directory >= 1.2.3.0,
    base >= 4.5 && < 5.0

source-repository head
    type:     git
    location: git://github.com/haskell-Z/z-botan.git

library
    exposed-modules:        Z.Botan.FFI
                            Z.Botan.Errno
                            Z.Botan.Exception
                            Z.Crypto.Cipher
                            Z.Crypto.Hash
                            Z.Crypto.RNG
                            Z.Crypto.MPI
                            Z.Crypto.KDF
                            Z.Crypto

    build-depends:          base                    >= 4.12 && <5.0
                          , Z-Data                  >= 0.7.1 && <0.8
                          , Z-IO                    == 0.7.*
                          , integer-gmp             == 1.*
                          , ghc-prim                >= 0.5.3
                          , stm                     == 2.5.*


    include-dirs:           include
                            third_party/botan
                            third_party/botan/build/include
                            third_party/botan/build/include/external


    includes:               hs_botan.h

    install-includes:       hs_botan.h

    c-sources:              cbits/hs_botan.c
                            third_party/botan/botan_all.cpp

    cc-options:             -march=native
    cxx-options:            -std=c++11 -march=native
    extra-libraries:        stdc++

    default-language:       Haskell2010
    default-extensions:     BangPatterns
                            CApiFFI
                            ConstraintKinds
                            CPP
                            DerivingStrategies
                            DeriveGeneric
                            DeriveAnyClass
                            DefaultSignatures
                            DataKinds
                            ExistentialQuantification
                            FlexibleContexts
                            FlexibleInstances
                            GADTs
                            GeneralizedNewtypeDeriving
                            KindSignatures
                            MagicHash
                            MultiParamTypeClasses
                            MultiWayIf
                            PartialTypeSignatures
                            PatternSynonyms
                            PolyKinds
                            QuantifiedConstraints
                            QuasiQuotes
                            OverloadedStrings
                            RankNTypes
                            RecordWildCards
                            ScopedTypeVariables
                            StandaloneDeriving
                            TemplateHaskell
                            TypeApplications
                            TypeFamilyDependencies
                            TypeFamilies
                            TypeOperators
                            TupleSections
                            UnboxedTuples
                            UnliftedFFITypes
                            ViewPatterns

    build-tool-depends:     hsc2hs:hsc2hs, hspec-discover:hspec-discover

    ghc-options:            -Wall

test-suite Z-Botan-Test
    type:                   exitcode-stdio-1.0
    main-is:                Spec.hs
    hs-source-dirs:         test/
    build-depends:          base
                          , Z-IO
                          , Z-Data
                          , hspec                   >= 2.5.4
                          , HUnit
                          , QuickCheck              >= 2.10
                          , quickcheck-instances

    other-modules:

    ghc-options:            -threaded
    default-language:       Haskell2010


